--- a/jQuery/Part3_FrontEndProject.html
+++ b/jQuery/Part3_FrontEndProject.html
@@ -14,7 +14,9 @@
       <h1>Welcome to Connect Four!</h1>
       <h2>The object of this game is to connect four of your chips in a row!</h2>
       <h3>Let's get started!</h3>
+
         <table class="board">
+        <!-- the button will be styled in the css file -->
         <tr>
           <td><button type="button"></button></td>
           <td><button type="button"></button></td>
